# cp

./: .clang-format  .gitignore  A_We_Got_Everything_Covered.cpp  B_A_Balanced_Problemset.cpp  CMakeLists.txt  D_Monsoon_s_Here.cpp  E_Binary_Deque.cpp  G_Range_Update.cpp  H_Xenia_and_Bit_Operations.cpp  I_Segtree_Max_X.cpp  README.md
!/: README.md
!/presets/: pre0.cpp  pre0.rs  pre1.cpp  pre2.cpp
!/presets/cpp/: pre0.cpp  pre1.cpp  pre2.cpp
!/presets/py/: pre0.py
!/presets/rust/: pre0.rs
CodeChef/Contests/START110/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
CodeForces/Contests/1844/: A.cpp  C.cpp
CodeForces/Contests/1850/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
CodeForces/Contests/1853/: A.cpp
CodeForces/Contests/1860/: B.cpp
CodeForces/Contests/1862/: A.cpp  B.cpp  C.cpp  F.cpp  G.cpp
CodeForces/Contests/1877/: A.cpp  B.cpp  C.cpp
CodeForces/Contests/1878/: A.cpp  B.cpp  C.cpp  D.cpp
CodeForces/Contests/1890/: A.cpp  B.cpp  C.cpp
CodeForces/Contests/1891/: A.cpp  B.cpp  C.cpp
CodeForces/Contests/1894/: A.cpp  (+1 more)
LeetCode/: main.cpp
LeetCode/problems/: 493.cpp
cses/: 1049_Increasing_Array.py  1068_Weird_Algorithm.cpp  1069_Repetitions.cpp  1070_Permutations.cpp  1071_Number_Spiral.rs  1072_Two_Knights.rs  1083_Missing_Number.cpp  1192_Counting_Rooms.rs  1193_Labyrinth.rs  1619_Restaurant_Customers.rs  1629_Movie_Festival.rs  1640_Sum_of_Two_Values.rs  1643_Maximum_Subarray_Sum.rs  1650_Range_Xor_Queries.rs  1666_Building_Roads.cpp  1667_Message_Route.cpp  1668_Building_Teams.cpp  1755_Palindrome_Reorder.rs  Dice_Combinations.rs  Missing_Number.cpp
(+588 files in other folders)
